# defi-toolbox-avalanche

./: .gitignore  .mcp.json  HayabusaRouter.sol  LICENSE  README.md  package-lock.json  package.json
ai-progress-notes/: 01_gas.md  02_follow_mode.md  03_bfs.md  04_pool_selection.md  05_performance.md  06_quote_api.md  08_async.md  12_v4.md  13_improve_coverage.md
archive/03_bfs/: index.ts
archive/04_vs_odos/: CLAUDE.md  capture_odos.ts  race.ts  test_buffered.ts  test_v4.ts  test_v4_gas.ts  test_v4_rpc.ts
archive/05_benchmark/: _test_rpc.ts  capture.ts  harness.ts
archive/pathfinders/simple-bfs/: Cargo.toml
archive/pathfinders/simple-bfs/data/: quoter_bytecode.hex  token_overrides.json
archive/pathfinders/simple-bfs/src/: bfs.rs  main.rs  overrides.rs  quoter.rs  state.rs
archive/quoting-go/: bfs.go  evm.go  go.mod  go.sum  main.go  overrides.go  parity.go  quoter.go  state.go
examples/: package-lock.json  package.json  tsconfig.json
examples/01_update_pools/: index.ts
examples/02_quote_pools/: index.ts
examples/03_route_analyzer/: README.md  convert.ts  convert.ts.worktree  debug_447a.ts  find_slots.ts  find_slots_batch.ts  find_txs.ts  index.ts  test.ts  test_2hop.ts  test_all_steps.ts  test_link_usdc.ts  test_step1.ts  test_step1_exhaust2.ts  test_step1_exhaustive.ts  test_step1_links.ts  txs.txt  (+7 more)
pools/: cached-rpc.ts  discovery.ts  index.ts  package-lock.json  package.json  pools.ts  tsconfig.json  types.ts
router/: encode.ts  index.ts  overrides.ts  package-lock.json  package.json  quote.ts  tsconfig.json
rpc/: ws-pool.ts
utils/: env.ts
(+171 files in other folders)
