[package]
name = "hayabusa-quoting"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "quote"
path = "src/main.rs"

[dependencies]
revm = { version = "34.0", default-features = false, features = ["std", "optional_no_base_fee"] }
alloy-primitives = { version = "1.5", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tungstenite = "0.26"
rayon = "1.10"
tikv-jemallocator = "0.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
